[package]
name = "tic_tac_toe"
description = "An implementation of Tic-Tac-Toe"
authors = ["Naimul Hoque <Naimul_Hoque@outlook.com>"]
license = "MIT"
repository = "https://github.com/N-Hoque/tic_tac_toe"
version = "0.4.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.4"
